# esp32_fsm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions_x1.csv  sdkconfig
main/: CMakeLists.txt  board_config.h
main/app/: test.c
